# git-backed-release-notes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  app.py  codex.json  pyproject.toml  pytest.ini  readme.md  update_foo.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: jj-PRIMER.md
features/: commit_issue_linking.feature  commit_issue_suggestion.feature  commit_release_suggestion.feature  commits.feature  edit_commit.feature  edit_from_index.feature  enable_file_edit_no_xlsx.feature  environment.py  file_backed_issue_metadata.feature  index.feature  issue_index.feature  issue_spreadsheet_mode.feature  no_spreadsheet_mode.feature  release_notes.feature  view_issue_file.feature
features/steps/: commits_steps.py  edit_commit_steps.py  edit_from_index_steps.py  https_steps.py  index_steps.py  issue_editing_steps 2.py  issue_editing_steps.py  issue_index_steps.py  js_steps.py  no_spreadsheet_mode_steps.py  release_steps.py
features/support/: git_helpers.py  issue_helpers.py
handlers/: commit.py  debug.py  issue.py  main.py  update.py
issues/closed/: add-behave-end-to-end-tests.md  add-commit-message-issue-links.md  add-debug-output-to-precedes-search.md  add-end-to-end-test-framework.md  add-styling.md  anchor-back-to-index.md  auto-open-browser-on-launch.md  automate-server-startup-and-fixture-repo.md  bootstrap-ci-with-pyproject.md  display-issue-slugs-in-index.md  dogfooding-no-spreadsheet-mode  edit-closed-issues-and-redirect.md  edit-issue-field-on-commit-page.md  edit-release-field-on-commit-page.md  enable-file-based-editing-no-spreadsheet-mode.md  fix-cursor-restore-on-blur.md  fix-issue-page-spreadsheet-backed.md  fix-stale-index-in-spreadsheet-mode.md  issue-centric-browsing.md  move-entry-point-to-git-release-notes-main.md  navigate-between-related-commits.md  refactor-app-for-modularization.md  refactor-extract-tag-logic.md  refine-last-landed-column.md  remove-self-following-tags.md  stop-index-slug-scenario-from-being-clobbered.md  style-commit-index-responsively.md  style-issue-detail-page.md  suggest-issues-on-index.md  suggest-release-from-precedes.md  suggest-touched-issue-fallback.md  unexpected-missing-precedes.md
issues/open/: add-behave-end-to-end-tests.md  add-commit-message-issue-links.md  add-styling.md  (+36 more)
scripts/: aliases.sh  ci-local.sh  jj-gen-aliases.sh  jj-ls-mutable.sh  jj-pull-mutable.sh  jj-push-mutable.sh  refresh_vendor_assets.sh  run-black.sh  run-mypy.sh  run-precommit.sh  run-ruff.sh  setup_local_assets.sh  vendor_update.py
templates/: commit.html  index.html  issue.html
tests/: conftest.py
utils/: commit_parsing.py  git.py  issues.py  metadata_store.py
(+37 files in other folders)
